--- a/src/components/HomePage/CardsGroup/CardsGroup.module.css
+++ b/src/components/HomePage/CardsGroup/CardsGroup.module.css
@@ -34,7 +34,7 @@
 }
 
 .cardsGroupTitle {
-  font-size: clamp(22px, 2.2vw, 32px);
+  font-size: 32px;
   font-weight: 700;
   color: var(--light-black);
   overflow: hidden;
