--- a/src/components/HomePage/CardsPart/CardsPart.module.css
+++ b/src/components/HomePage/CardsPart/CardsPart.module.css
@@ -19,7 +19,7 @@
   flex-direction: column;
 }
 
-@media (width < 768px) {
+@media (width < 1050px) {
   .cardsRow {
     flex-direction: column;
   }
